force-app/main/default/objects/Support_Request__c/Support_Request__c.object-meta.xml
<CustomObject>
    <description>SM - This object is for incoming requests submitted by the Business within Salesforce.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>