force-app/main/default/objects/Support_Request__c/fields/Add_to_a_Release__c.field-meta.xml
<CustomField>
    <fullName>Add_to_a_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Release__c.Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>