force-app/main/default/objects/Support_Request__c/fields/Alternative_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Solutions__c</fullName>
    <label>Alternative Solutions</label>
    <type>TextArea</type>
</CustomField>