force-app/main/default/objects/Support_Request__c/fields/Components_Updated__c.field-meta.xml
<CustomField>
    <fullName>Components_Updated__c</fullName>
    <label>Components Updated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Classes</fullName>
            </value>
            <value>
                <fullName>Apex Triggers</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Assignment Rules</fullName>
            </value>
            <value>
                <fullName>Conga Buttons</fullName>
            </value>
            <value>
                <fullName>Custom Fields</fullName>
            </value>
            <value>
                <fullName>Custom Metadata</fullName>
            </value>
            <value>
                <fullName>Custom Objects</fullName>
            </value>
            <value>
                <fullName>Custom Settings</fullName>
            </value>
            <value>
                <fullName>Email Templates</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Visualforce Pages</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>