force-app/main/default/objects/Support_Request__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <formula>CASE(Status__c , 
'New', 'Pending',
'Confirmed', 'Pending',
'In Development', 'Pending',
'In User Validation', 'Pending',
'Waiting for User Response', 'Pending',
'Added to a Project', 'Pending',
'Added to a Release', 'Completed',
'Ready for Stating', 'Completed',
'Closed', 'Completed',
'Merged to Deployment Package', 'Completed',
'Accepted', 'Completed',
'Duplicate/Canceled/Other')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>