force-app/main/default/objects/Support_Request__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>For HR Division User Request Only</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acctng</fullName>
            </value>
            <value>
                <fullName>DIR/SB</fullName>
            </value>
            <value>
                <fullName>OIS</fullName>
            </value>
            <value>
                <fullName>ODLS</fullName>
            </value>
            <value>
                <fullName>CHSWC</fullName>
            </value>
            <value>
                <fullName>DWC</fullName>
            </value>
            <value>
                <fullName>DLSE</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>ODR</fullName>
            </value>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>ODPIO</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>RTWSP</fullName>
            </value>
            <value>
                <fullName>DOSH</fullName>
            </value>
            <value>
                <fullName>OSHAB</fullName>
            </value>
            <value>
                <fullName>BSO</fullName>
            </value>
            <value>
                <fullName>ODLN</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>WCAB</fullName>
            </value>
            <value>
                <fullName>OSHSB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>