force-app/main/default/objects/Support_Request__c/fields/Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Flag__c</fullName>
    <formula>IF((Mark_as_Duplicate__c &amp;&amp;  ISPICKVAL(Status__c, 'Duplicate')), IMAGE("https://cadir.file.force.com/servlet/servlet.FileDownload?file=015d000000BDIDd" ,"Service Management"), " ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Flag</label>
    <type>Text</type>
</CustomField>