force-app/main/default/objects/Support_Request__c/fields/Multi_Unit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Multi_Unit_Flag__c</fullName>
    <formula>CASE(Support_Request_For__c, 
'BOFE','BOFE', 
'WCA','WCA',
'CASHIERING','CASHIERING',
'PAGA','PAGA',
'HR','HR',
'OIS','OIS',
'JEU','JEU',
'REGISTRATION','REGISTRATION',
'RCI','RCI',
'ACCOUNTING','ACCOUNTING',
'MULTI-UNIT/ACCOUNT REQUEST')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>