force-app/main/default/objects/Support_Request__c/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <formula>If(Number_of_Completed_Tasks__c&gt; 0,Number_of_Completed_Tasks__c /Number_of_Tasks__c,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Tasks Percent Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>