force-app/main/default/objects/Support_Request__c/fields/Prior_RT_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_RT_Value__c</fullName>
    <label>Prior RT Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>