force-app/main/default/objects/Support_Request__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE(
CASE(Priority__c,
"Critical", "/resource/1664310946000/SRSeverityFlagRed",
"High", "/resource/1664310600000/SRSeverityFlagOrange",
"Moderate", "/resource/1664310819000/SRSeverityFlagYellow",
"Low","/resource/1664309408000/SRSeverityFlagGreen",
"/s.gif"),
"Severity Flag")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>