force-app/main/default/objects/Support_Request__c/fields/Readiness__c.field-meta.xml
<CustomField>
    <fullName>Readiness__c</fullName>
    <formula>IMAGE( 
CASE( Release_Activity_Status__c, 
"New", "/img/samples/flag_red.gif",
"In Progress", "/img/samples/flag_yellow.gif",
"Ready to Deploy", "/img/samples/flag_green.gif",
"Deployed", "/img/samples/flag_green.gif",
"/s.gif"),
"Readiness Flag")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Readiness</label>
    <type>Text</type>
</CustomField>