force-app/main/default/objects/Support_Request__c/fields/Ready_To_Deploy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Deploy_Flag__c</fullName>
    <formula>IF( Number_of_Tasks__c =  Number_of_Completed_Tasks__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready To Deploy Flag</label>
    <type>Checkbox</type>
</CustomField>