force-app/main/default/objects/Support_Request__c/fields/Release_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Note_Date__c</fullName>
    <label>Release Note Date</label>
    <type>Date</type>
</CustomField>