force-app/main/default/objects/Support_Request__c/fields/Reviewed_by__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>