force-app/main/default/objects/Support_Request__c/fields/Select_Queue__c.field-meta.xml
<CustomField>
    <fullName>Select_Queue__c</fullName>
    <label>Select Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CalAtlas Business Team</fullName>
            </value>
            <value>
                <fullName>Salesforce Support Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>