force-app/main/default/objects/Support_Request__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - Data Fix – User Cannot Proceed</fullName>
            </value>
            <value>
                <fullName>High - System Error – No Workaround</fullName>
            </value>
            <value>
                <fullName>High - Urgent Permission/License Assignment</fullName>
            </value>
            <value>
                <fullName>High - Urgent Report Generation/Dashboard</fullName>
            </value>
            <value>
                <fullName>High - Urgent Archived Data Retrieval</fullName>
            </value>
            <value>
                <fullName>High - Refund or Payment Request</fullName>
            </value>
            <value>
                <fullName>High - Deployment Issue</fullName>
            </value>
            <value>
                <fullName>High - Other</fullName>
            </value>
            <value>
                <fullName>Medium - Data Fix – Workaround in Place</fullName>
            </value>
            <value>
                <fullName>Medium - System Error – Workaround in Place</fullName>
            </value>
            <value>
                <fullName>Medium - Non-urgent Permission/License Assignment</fullName>
            </value>
            <value>
                <fullName>Medium - Non-urgent Report Generation/Dashboard</fullName>
            </value>
            <value>
                <fullName>Medium - Non-urgent Archived Data Retrieval</fullName>
            </value>
            <value>
                <fullName>Medium - Other</fullName>
            </value>
            <value>
                <fullName>Low - Data Fix - Minimal Business Impact</fullName>
            </value>
            <value>
                <fullName>Low - Other</fullName>
            </value>
            <value>
                <fullName>75% Users Impacted</fullName>
                <isActive>false</isActive>
                <label>75% Users Impacted</label>
            </value>
            <value>
                <fullName>90% Users Impacted</fullName>
                <isActive>false</isActive>
                <label>90% Users Impacted</label>
            </value>
            <value>
                <fullName>Less than 50% Users Impacted</fullName>
                <isActive>false</isActive>
                <label>Less than 50% Users Impacted</label>
            </value>
            <value>
                <fullName>Medium - 3RD Party App Issu</fullName>
                <isActive>false</isActive>
                <label>Medium - 3RD Party App Issu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>