force-app/main/default/objects/Support_Request__c/fields/Severity_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>Severity_Other_Specify__c</fullName>
    <description>If Other is selected on the Severity picklist, this field is required</description>
    <label>Severity - Other Specify</label>
    <type>TextArea</type>
</CustomField>