force-app/main/default/objects/Support_Request__c/fields/Source_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Source_Sandbox__c</fullName>
    <label>Source Sandbox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Support Environment</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>N/A - Configuration Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>