force-app/main/default/objects/Support_Request__c/fields/SR_Handled_by_Business_Team__c.field-meta.xml
<CustomField>
    <fullName>SR_Handled_by_Business_Team__c</fullName>
    <formula>If (Assigned_To__r.CalAtlas_Business_Team_Member__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Handled by Business Team</label>
    <type>Checkbox</type>
</CustomField>