force-app/main/default/objects/Support_Request__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <formula>IMAGE( 
CASE(Status__c, 
"Accepted",  "https://cadir.file.force.com/servlet/servlet.FileDownload?file=015t0000000LUk8",
"Added to a Release",  "https://cadir.file.force.com/servlet/servlet.FileDownload?file=015t0000000LUk8",
"/s.gif"),
"Flag")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Result</label>
    <type>Text</type>
</CustomField>