force-app/main/default/objects/Support_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deputy Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Industrial Relations Representative</fullName>
            </value>
            <value>
                <fullName>Management Services Technician</fullName>
            </value>
            <value>
                <fullName>Office Assistant</fullName>
            </value>
            <value>
                <fullName>Office Technician</fullName>
            </value>
            <value>
                <fullName>Payroll Auditor</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Senior Deputy Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Staff Service Analyst</fullName>
            </value>
            <value>
                <fullName>Legal Secretary</fullName>
            </value>
            <value>
                <fullName>Assistant Chief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>