force-app/main/default/objects/Support_Request__c/recordTypes/User_Account_Request.recordType-meta.xml
<RecordType>
    <fullName>User_Account_Request</fullName>
    <active>true</active>
    <description>Request for a new Salesforce account or update/delete existing accounts (Production &amp; Sandbox)</description>
    <label>Account Request</label>
</RecordType>